--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer">
   </head>
   <body>
-    <nav>
+    <nav class="estatica">
         <div class="izquierda dos-columnas">
           <div class="transition-iten">
           <i class="fa-solid fa-bars"></i>
@@ -33,8 +33,8 @@
           <button class="boton">"<img draggable="false" alt="Imagen del avatar" height="32" width="32" src="https://yt3.ggpht.com/yti/ANjgQV9dfgvsyBYbZ-l4PW4FdHN5r1NAlVzf3PheSWuxEk8=s88-c-k-c0x00ffffff-no-rj"></button>
         </div>
     </nav>
-    <div class="transition-iten sidebar-item">
-      <aside class="sidebar">
+    <div class="sidebar-item">
+      <aside class="sidebar transition-iten">
         <div>
           <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path d="m11.485 2.143-8 4.8-2 1.2a1 1 0 001.03 1.714L3 9.567V20a2 2 0 002 2h5v-8h4v8h5a2 2 0 002-2V9.567l.485.29a1 1 0 001.03-1.714l-2-1.2-8-4.8a1 1 0 00-1.03 0Z" fill="white"></path></svg>
           <span>Inicio</span>
@@ -53,18 +53,20 @@
         </div>
       </aside>
     </div>
-    <div>
-      <button class="categorias-alejar">Todo</button>
-      <button class="categorias">Musica</button>
-      <button class="categorias">Podcasts</button>
-      <button class="categorias">Mixes</button>
-      <button class="categorias">Videojuegos</button>
-      <button class="categorias">Maletas</button>
-      <button class="categorias">Restaurantes</button>
-      <button class="categorias">En directo</button>
-      <button class="categorias">Raggaeton</button>
-      <button class="categorias">Pop latino</button>
-      <button class="categorias">Comedia</button>
-    </div>
-  </body>
+    <main>
+      <div>
+        <button class="categorias-alejar">Todo</button>
+        <button class="categorias">Musica</button>
+        <button class="categorias">Podcasts</button>
+        <button class="categorias">Mixes</button>
+        <button class="categorias">Videojuegos</button>
+        <button class="categorias">Maletas</button>
+        <button class="categorias">Restaurantes</button>
+        <button class="categorias">En directo</button>
+        <button class="categorias">Raggaeton</button>
+        <button class="categorias">Pop latino</button>
+        <button class="categorias">Comedia</button>
+      </div>
+    </main>
+    </body>
 </html>
