--- a/index.html
+++ b/index.html
@@ -17,25 +17,26 @@
           </div>
           <img src="logo.svg" alt="logo">
         </div>
-        <div class="centro transition-iten"> 
-          <button class="boton">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
-              <path d="M11 2a9 9 0 105.641 16.01.966.966 0 00.152.197l3.5 3.5a1 1 0 101.414-1.414l-3.5-3.5a1 1 0 00-.197-.153A8.96 8.96 0 0020 11a9 9 0 00-9-9Zm0 2a7 7 0 110 14 7 7 0 010-14Z" fill="currentColor"></path></svg>
-          </button>
-          <button class="boton">
+        <div id="buscador"  class="centro "> 
+          <input type="text" placeholder="Buscar" >
+          <button class="boton transition-iten">
+              <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+              <path d="M11 2a9 9 0 105.641 16.01.966.966 0 00.152.197l3.5 3.5a1 1 0 101.414-1.414l-3.5-3.5a1 1 0 00-.197-.153A8.96 8.96 0 0020 11a9 9 0 00-9-9Zm0 2a7 7 0 110 14 7 7 0 010-14Z" fill="currentColor"></path></svg>           
+            </button>           
+          <button class="boton transition-iten">
             <i class="fa-solid fa-microphone"></i>
           </button>
-          </div>
-        <div class="derecha transition-iten">
-          <button class="boton"><p>+Crear</p></button>
-          <button class="boton"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
+        </div>
+        <div class="derecha ">
+          <button class="boton transition-iten"><i class="fa-solid fa-video"></i></button>
+          <button class="transition-iten campanita"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
             <path d="M16 19a4 4 0 11-8 0H4.765C3.21 19 2.25 17.304 3.05 15.97l1.806-3.01A1 1 0 005 12.446V8a7 7 0 0114 0v4.446c0 .181.05.36.142.515l1.807 3.01c.8 1.333-.161 3.029-1.716 3.029H16ZM12 3a5 5 0 00-5 5v4.446a3 3 0 01-.428 1.543L4.765 17h14.468l-1.805-3.01A3 3 0 0117 12.445V8a5 5 0 00-5-5Zm-2 16a2 2 0 104 0h-4Z" fill="currentColor"></path></svg></button>
-          <button class="boton">"<img draggable="false" alt="Imagen del avatar" height="32" width="32" src="https://yt3.ggpht.com/yti/ANjgQV9dfgvsyBYbZ-l4PW4FdHN5r1NAlVzf3PheSWuxEk8=s88-c-k-c0x00ffffff-no-rj"></button>
+          <button class="boton"><img draggable="false" alt="Imagen del avatar" height="32" width="32" src="https://yt3.ggpht.com/yti/ANjgQV9dfgvsyBYbZ-l4PW4FdHN5r1NAlVzf3PheSWuxEk8=s88-c-k-c0x00ffffff-no-rj"></button>
         </div>
     </nav>
-    <div class="sidebar-item">
-      <aside class="sidebar transition-iten">
-        <div>
+    <div class="sidebar-item estatica">
+      <aside class="sidebar ">
+        <div class="transition-iten">
           <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path d="m11.485 2.143-8 4.8-2 1.2a1 1 0 001.03 1.714L3 9.567V20a2 2 0 002 2h5v-8h4v8h5a2 2 0 002-2V9.567l.485.29a1 1 0 001.03-1.714l-2-1.2-8-4.8a1 1 0 00-1.03 0Z" fill="white"></path></svg>
           <span>Inicio</span>
         </div>
@@ -54,8 +55,8 @@
       </aside>
     </div>
     <main>
-      <div>
-        <button class="categorias-alejar">Todo</button>
+      <div class="content">
+        <button class="categorias">Todo</button>
         <button class="categorias">Musica</button>
         <button class="categorias">Podcasts</button>
         <button class="categorias">Mixes</button>
