--- a/index.html
+++ b/index.html
@@ -1,72 +1,172 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Youtube</title>
-    <link rel="stylesheet" href="./style/general.css">
-    <link rel="stylesheet" href="./style/main.css">
-    <link rel="stylesheet" href="./style/nav.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./style/general.css" />
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/nav.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav class="estatica">
-        <div class="izquierda dos-columnas">
-          <div class=" campanita transition-iten">
+      <div class="izquierda dos-columnas">
+        <div class="campanita transition-iten">
           <i class="fa-solid fa-bars"></i>
-          </div>
-          <img src="logo.svg" alt="logo">
         </div>
-        <div id="buscador"  class="centro"> 
-          <input type="text" placeholder="Buscar" >
-          <button class=" microfono boton transition-iten">
-              <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
-              <path d="M11 2a9 9 0 105.641 16.01.966.966 0 00.152.197l3.5 3.5a1 1 0 101.414-1.414l-3.5-3.5a1 1 0 00-.197-.153A8.96 8.96 0 0020 11a9 9 0 00-9-9Zm0 2a7 7 0 110 14 7 7 0 010-14Z" fill="currentColor"></path></svg>           
-            </button>           
-          <button class="boton transition-iten">
-            <i class="fa-solid fa-microphone"></i>
-          </button>
-        </div>
-        <div class="derecha ">
-          <button class="boton transition-iten"><i class="fa-solid fa-video"></i></button>
-          <button class="transition-iten campanita"><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;">
-            <path d="M16 19a4 4 0 11-8 0H4.765C3.21 19 2.25 17.304 3.05 15.97l1.806-3.01A1 1 0 005 12.446V8a7 7 0 0114 0v4.446c0 .181.05.36.142.515l1.807 3.01c.8 1.333-.161 3.029-1.716 3.029H16ZM12 3a5 5 0 00-5 5v4.446a3 3 0 01-.428 1.543L4.765 17h14.468l-1.805-3.01A3 3 0 0117 12.445V8a5 5 0 00-5-5Zm-2 16a2 2 0 104 0h-4Z" fill="currentColor"></path></svg></button>
-          <button class="boton"><img draggable="false" alt="Imagen del avatar" height="32" width="32" src="https://yt3.ggpht.com/yti/ANjgQV9dfgvsyBYbZ-l4PW4FdHN5r1NAlVzf3PheSWuxEk8=s88-c-k-c0x00ffffff-no-rj"></button>
-        </div>
+        <img src="logo.svg" alt="logo" />
+      </div>
+      <div id="buscador" class="centro">
+        <input type="text" placeholder="Buscar" />
+        <button class="microfono boton transition-iten">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+            style="
+              pointer-events: none;
+              display: inherit;
+              width: 100%;
+              height: 100%;
+            "
+          >
+            <path
+              d="M11 2a9 9 0 105.641 16.01.966.966 0 00.152.197l3.5 3.5a1 1 0 101.414-1.414l-3.5-3.5a1 1 0 00-.197-.153A8.96 8.96 0 0020 11a9 9 0 00-9-9Zm0 2a7 7 0 110 14 7 7 0 010-14Z"
+              fill="currentColor"
+            ></path>
+          </svg>
+        </button>
+        <button class="boton transition-iten">
+          <i class="fa-solid fa-microphone"></i>
+        </button>
+      </div>
+      <div class="derecha">
+        <button class="boton transition-iten">
+          <i class="fa-solid fa-video"></i>
+        </button>
+        <button class="transition-iten campanita">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+            style="
+              pointer-events: none;
+              display: inherit;
+              width: 100%;
+              height: 100%;
+            "
+          >
+            <path
+              d="M16 19a4 4 0 11-8 0H4.765C3.21 19 2.25 17.304 3.05 15.97l1.806-3.01A1 1 0 005 12.446V8a7 7 0 0114 0v4.446c0 .181.05.36.142.515l1.807 3.01c.8 1.333-.161 3.029-1.716 3.029H16ZM12 3a5 5 0 00-5 5v4.446a3 3 0 01-.428 1.543L4.765 17h14.468l-1.805-3.01A3 3 0 0117 12.445V8a5 5 0 00-5-5Zm-2 16a2 2 0 104 0h-4Z"
+              fill="currentColor"
+            ></path>
+          </svg>
+        </button>
+        <button class="boton">
+          <img
+            draggable="false"
+            alt="Imagen del avatar"
+            height="32"
+            width="32"
+            src="https://yt3.ggpht.com/yti/ANjgQV9dfgvsyBYbZ-l4PW4FdHN5r1NAlVzf3PheSWuxEk8=s88-c-k-c0x00ffffff-no-rj"
+          />
+        </button>
+      </div>
     </nav>
     <main>
-      <div class="sidebar-item estatica">
-        <aside class="sidebar ">
-          <div class="transition-todo">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path d="m11.485 2.143-8 4.8-2 1.2a1 1 0 001.03 1.714L3 9.567V20a2 2 0 002 2h5v-8h4v8h5a2 2 0 002-2V9.567l.485.29a1 1 0 001.03-1.714l-2-1.2-8-4.8a1 1 0 00-1.03 0Z" fill="white"></path></svg>
-            <span>Inicio</span>
-          </div>
-          <div class="transition-todo">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;" fill="white"><path d="m13.467 1.19-8 4.7a5 5 0 00-.255 8.46 5 5 0 005.32 8.462l8-4.7a5 5 0 00.258-8.462 5 5 0 001.641-6.464l-.12-.217a5 5 0 00-6.844-1.78m5.12 2.79a2.999 2.999 0 01-1.067 4.107l-1.327.78a1 1 0 00.096 1.775l.943.423a3 3 0 01.288 5.323l-8 4.7a3 3 0 01-3.039-5.173l1.327-.78a1 1 0 00-.097-1.775l-.942-.423a3 3 0 01-.288-5.323l8-4.7a3 3 0 014.106 1.066ZM15 12l-5-3v6l5-3Z"></path></svg>
-            <span>Shorts</span>
-          </div>
-          <div class="transition-todo">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path d="M18 1H6a2 2 0 00-2 2h16a2 2 0 00-2-2Zm3 4H3a2 2 0 00-2 2v13a2 2 0 002 2h18a2 2 0 002-2V7a2 2 0 00-2-2ZM3 20V7h18v13H3Zm13-6.5L10 10v7l6-3.5Z" fill="white"></path></svg>
-            <span>Suscripciones</span>
-          </div>
-          <div class="transition-todo">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 0 24 24" width="24" focusable="false" aria-hidden="true" style="pointer-events: none; display: inherit; width: 100%; height: 100%;"><path d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 2a9 9 0 016.447 15.276 7 7 0 00-12.895 0A9 9 0 0112 3Zm0 2a4 4 0 100 8 4 4 0 000-8Zm0 2a2 2 0 110 4 2 2 0 010-4Zm-.1 9.001L11.899 16a5 5 0 014.904 3.61A8.96 8.96 0 0112 21a8.96 8.96 0 01-4.804-1.391 5 5 0 014.704-3.608Z" fill="white"></path></svg>
-            <span>Tu</span>
-          </div>
-        </aside>
-      </div>
-      <div class="categorias-larga">
-        <button class="categorias">Todo</button>
-        <button class="categorias">Musica</button>
-        <button class="categorias">Podcasts</button>
-        <button class="categorias">Mixes</button>
-        <button class="categorias">Videojuegos</button>
-        <button class="categorias">Maletas</button>
-        <button class="categorias">Restaurantes</button>
-        <button class="categorias">En directo</button>
-        <button class="categorias">Raggaeton</button>
-        <button class="categorias">Pop latino</button>
-        <button class="categorias">Comedia</button>
+      <aside class="sidebar">
+        <div class="transition-todo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+          >
+            <path
+              d="m11.485 2.143-8 4.8-2 1.2a1 1 0 001.03 1.714L3 9.567V20a2 2 0 002 2h5v-8h4v8h5a2 2 0 002-2V9.567l.485.29a1 1 0 001.03-1.714l-2-1.2-8-4.8a1 1 0 00-1.03 0Z"
+              fill="white"
+            ></path>
+          </svg>
+          <p>Inicio</p>
+        </div>
+        <div class="transition-todo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+            fill="white"
+          >
+            <path
+              d="m13.467 1.19-8 4.7a5 5 0 00-.255 8.46 5 5 0 005.32 8.462l8-4.7a5 5 0 00.258-8.462 5 5 0 001.641-6.464l-.12-.217a5 5 0 00-6.844-1.78m5.12 2.79a2.999 2.999 0 01-1.067 4.107l-1.327.78a1 1 0 00.096 1.775l.943.423a3 3 0 01.288 5.323l-8 4.7a3 3 0 01-3.039-5.173l1.327-.78a1 1 0 00-.097-1.775l-.942-.423a3 3 0 01-.288-5.323l8-4.7a3 3 0 014.106 1.066ZM15 12l-5-3v6l5-3Z"
+            ></path>
+          </svg>
+          <span>Shorts</span>
+        </div>
+        <div class="transition-todo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+          >
+            <path
+              d="M18 1H6a2 2 0 00-2 2h16a2 2 0 00-2-2Zm3 4H3a2 2 0 00-2 2v13a2 2 0 002 2h18a2 2 0 002-2V7a2 2 0 00-2-2ZM3 20V7h18v13H3Zm13-6.5L10 10v7l6-3.5Z"
+              fill="white"
+            ></path>
+          </svg>
+          <span>Suscripciones</span>
+        </div>
+        <div class="transition-todo">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            height="24"
+            viewBox="0 0 24 24"
+            width="24"
+            focusable="false"
+            aria-hidden="true"
+          >
+            <path
+              d="M12 1C5.925 1 1 5.925 1 12s4.925 11 11 11 11-4.925 11-11S18.075 1 12 1Zm0 2a9 9 0 016.447 15.276 7 7 0 00-12.895 0A9 9 0 0112 3Zm0 2a4 4 0 100 8 4 4 0 000-8Zm0 2a2 2 0 110 4 2 2 0 010-4Zm-.1 9.001L11.899 16a5 5 0 014.904 3.61A8.96 8.96 0 0112 21a8.96 8.96 0 01-4.804-1.391 5 5 0 014.704-3.608Z"
+              fill="white"
+            ></path>
+          </svg>
+          <span>Tu</span>
+        </div>
+      </aside>
+      <div>
+        <div class="categorias-larga">
+          <button class="categorias">Todo</button>
+          <button class="categorias">Musica</button>
+          <button class="categorias">Podcasts</button>
+          <button class="categorias">Mixes</button>
+          <button class="categorias">Videojuegos</button>
+          <button class="categorias">Maletas</button>
+          <button class="categorias">Restaurantes</button>
+          <button class="categorias">En directo</button>
+          <button class="categorias">Raggaeton</button>
+          <button class="categorias">Pop latino</button>
+          <button class="categorias">Comedia</button>
+        </div>
       </div>
     </main>
   </body>
